# deckboxtopia

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
API/: .gitignore
API/src/: main.rs  state.rs
API/src/endpoints/: mod.rs
API/src/endpoints/deck/: create_deck.rs  draw.rs  mod.rs
API/src/models/: card.rs  deck.rs
nextjs-dashboard/: .env.development  next.config.js  package-lock.json  package.json  tsconfig.json
nextjs-dashboard/src/app/: layout.tsx
nextjs-dashboard/src/app/(dashboard)/dashboard/: page.tsx
nextjs-dashboard/src/app/(dashboard)/libaries/: page.tsx
nextjs-dashboard/src/app/createLibrary/: page.tsx
nextjs-dashboard/src/app/types/: card.ts
nextjs-dashboard/src/components/: CardTile.tsx  CardsToAdd.tsx  CreateLibraryForm.tsx
shuttle/: .gitignore  Cargo.toml  Example-Secrets.toml  README.md
shuttle/src/: main.rs  state.rs
shuttle/src/auth/: mod.rs  session.rs
shuttle/src/config/: mod.rs
shuttle/src/discord/: config.rs  mod.rs  models.rs
shuttle/src/endpoints/: discord.rs  mod.rs
shuttle/src/endpoints/deck/: mod.rs  update_deck.rs
shuttle/src/models/: library.rs
shuttle/src/utils/: mod.rs
src/: main.rs
src/endpoints/: create_deck.rs  create_library.rs  draw.rs  get.rs  mod.rs
src/endpoints/deck/: create_deck.rs  draw.rs  mod.rs  update_deck.rs
src/models/: deck.rs  library.rs  mod.rs
static/: index.html
